--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,11 @@ html , body
 {
     margin-right: auto;
 }
+#header h2 button
+{
+    font-size:x-large;
+    font-style: bold;
+}
 
 
 #header button
@@ -118,6 +123,5 @@ html , body
     display:flex;
     justify-content: center;
     align-items: center;
-    color: grey;
     height: 50%;
 }
