--- a/src/style.css
+++ b/src/style.css
@@ -144,8 +144,9 @@ html , body
     display: flex;
     justify-content: flex-start;
     gap: 1rem;
-    padding: 2px;
+    padding: 5px;
     border: 1px solid white;
+    flex-wrap: wrap;
 }
 
 #content .projects div .bun
